[package]
name = 'bunbi-runtime'
version = '0.6.0'
authors = ['bunbi']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'runtime'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Local dependencies
#pallet-donations = { default-features = false, path = '../pallets/donations' }
pallet-faucets = { default-features = false, path = '../pallets/faucets' }
#pallet-moderation = { default-features = false, path = '../pallets/moderation' }
pallet-permissions = { default-features = false, path = '../pallets/permissions' }

pallet-post-history = { default-features = false, path = '../pallets/post-history' }
pallet-posts = { default-features = false, path = '../pallets/posts' }

pallet-profile-follows = { default-features = false, path = '../pallets/profile-follows' }
pallet-profile-history = { default-features = false, path = '../pallets/profile-history' }
pallet-profiles = { default-features = false, path = '../pallets/profiles' }

pallet-reactions = { default-features = false, path = '../pallets/reactions' }
pallet-roles = { default-features = false, path = '../pallets/roles' }
pallet-scores = { default-features = false, path = '../pallets/scores' }
#pallet-session-keys = { default-features = false, path = '../pallets/session-keys' }

pallet-space-follows = { default-features = false, path = '../pallets/space-follows' }
pallet-space-history = { default-features = false, path = '../pallets/space-history' }
pallet-space-ownership = { default-features = false, path = '../pallets/space-ownership' }
pallet-spaces = { default-features = false, path = '../pallets/spaces' }

#pallet-subscriptions = { default-features = false, path = '../pallets/subscriptions' }
pallet-utils = { default-features = false, path = '../pallets/utils' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
frame-executive = { default-features = false, version = '2.0.1' }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.1' }

pallet-aura = { default-features = false, version = '2.0.1' }
pallet-balances = { default-features = false, version = '2.0.1' }
pallet-grandpa = { default-features = false, version = '2.0.1' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.1' }
pallet-scheduler = { default-features = false, version = '2.0.1' }
pallet-sudo = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
pallet-transaction-payment = { default-features = false, version = '2.0.1' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.1' }
pallet-utility = { default-features = false, version = '2.0.1' }

sp-api = { default-features = false, version = '2.0.1' }
sp-block-builder = { default-features = false, version = '2.0.1' }
sp-consensus-aura = { default-features = false, version = '0.8.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-inherents = { default-features = false, version = '2.0.1' }
sp-offchain = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-session = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-transaction-pool = { default-features = false, version = '2.0.1' }
sp-version = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-scheduler/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-utility/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-io/std',
#    'pallet-donations/std',
    'pallet-faucets/std',
#    'pallet-moderation/std',
    'pallet-permissions/std',
    'pallet-post-history/std',
    'pallet-posts/std',
    'pallet-profile-follows/std',
    'pallet-profile-history/std',
    'pallet-profiles/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-scores/std',
    'pallet-space-follows/std',
    'pallet-space-history/std',
    'pallet-space-ownership/std',
    'pallet-spaces/std',
#    'session-keys/std',
#    'pallet-subscriptions/std',
    'pallet-utils/std',
]
