[package]
name = 'df-integration-tests'
version = '0.6.0'
authors = ['Bunbi']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'Integration tests'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-io/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
# Substrate dependencies
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }

pallet-balances = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }

sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }

[dev-dependencies]
# Local dependencies
pallet-moderation = { default-features = false, path = '../moderation' }
pallet-permissions = { default-features = false, path = '../permissions' }

pallet-post-history = { default-features = false, path = '../post-history' }
pallet-posts = { default-features = false, path = '../posts' }

pallet-profile-follows = { default-features = false, path = '../profile-follows' }
pallet-profile-history = { default-features = false, path = '../profile-history' }
pallet-profiles = { default-features = false, path = '../profiles' }

pallet-reactions = { default-features = false, path = '../reactions' }
pallet-roles = { default-features = false, path = '../roles' }
pallet-scores = { default-features = false, path = '../scores' }

pallet-space-follows = { default-features = false, path = '../space-follows' }
pallet-space-history = { default-features = false, path = '../space-history' }
pallet-space-ownership = { default-features = false, path = '../space-ownership' }
pallet-spaces = { default-features = false, path = '../spaces' }

pallet-utils = { default-features = false, path = '../utils' }

# Substrate dependencies
sp-core = { default-features = false, version = '2.0.1' }
