[package]
name = 'pallet-moderation'
version = '0.6.0'
authors = ['Bunbi']
edition = '2021'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'pallet for content moderation'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'df-traits/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-utils/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
# Local dependencies
df-traits = { default-features = false, path = '../traits' }
pallet-permissions = { default-features = false, path = '../permissions' }
pallet-posts = { default-features = false, path = '../posts' }
pallet-space-follows = { default-features = false, path = '../space-follows' }
pallet-spaces = { default-features = false, path = '../spaces' }
pallet-utils = { default-features = false, path = '../utils' }

# Substrate dependencies
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }

sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }

[dev-dependencies]
# Local dependencies
pallet-profiles = { default-features = false, path = '../profiles' }
pallet-roles = { default-features = false, path = '../roles' }

# Substrate dependencies
pallet-balances = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }

sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
