[package]
name = 'pallet-space-follows'
version = '0.6.0'
authors = ['Bunbi']
edition = '2021'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'Pallet that allows to follow/unfollow spaces'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'df-traits/std',
    'pallet-profiles/std',
    'pallet-spaces/std',
    'pallet-utils/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
# Local depenpdencies
df-traits = { default-features = false, path = '../traits' }
pallet-profiles = { default-features = false, path = '../profiles' }
pallet-spaces = { default-features = false, path = '../spaces' }
pallet-utils = { default-features = false, path = '../utils' }

# Substrate dependencies
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
