[package]
name = 'pallet-spaces'
version = '0.6.0'
authors = ['Bunbi']
edition = '2021'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'Space management pallet'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'pallet-utils/std',
    'df-traits/std',
    'pallet-permissions/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
impl-trait-for-tuples = '0.1.3'
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Local dependencies
df-traits = { default-features = false, path = '../traits' }
pallet-utils = { default-features = false, path = '../utils' }
pallet-permissions = { default-features = false, path = '../permissions' }

# Substrate dependencies
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
