[package]
name = 'pallet-subscriptions'
version = '0.6.0'
authors = ['Bunbi']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'Subsocial pallet to manage paid subscriptions (aka recurring payments)'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-sudo/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-permissions/std',
    'pallet-spaces/std',
    'pallet-utils/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
# Local dependencies
pallet-permissions = { default-features = false, path = '../permissions' }
pallet-spaces = { default-features = false, path = '../spaces' }
pallet-utils = { default-features = false, path = '../utils' }

# Substrate dependencies
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
pallet-sudo = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }

[dev-dependencies]
# Substrate dependencies
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
