[package]
name = 'pallet-utils'
version = '0.6.0'
authors = ['Bunbi']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://bunbi.com.mx'
repository = 'https://github.com/BUNBi-Blockchain-Business-Intelligence/bunbi-node'
description = 'Pallet with common utils'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'pallet-timestamp/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Substrate dependencies
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }

[dev-dependencies]
pallet-balances = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
